rest/pricing/v1/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.53.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *https://pricing.twilio.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*MessagingCountriesApi* | [**FetchMessagingCountry**](docs/MessagingCountriesApi.md#fetchmessagingcountry) | **Get** /v1/Messaging/Countries/{IsoCountry} | 
*MessagingCountriesApi* | [**ListMessagingCountry**](docs/MessagingCountriesApi.md#listmessagingcountry) | **Get** /v1/Messaging/Countries | 
*PhoneNumbersCountriesApi* | [**FetchPhoneNumberCountry**](docs/PhoneNumbersCountriesApi.md#fetchphonenumbercountry) | **Get** /v1/PhoneNumbers/Countries/{IsoCountry} | 
*PhoneNumbersCountriesApi* | [**ListPhoneNumberCountry**](docs/PhoneNumbersCountriesApi.md#listphonenumbercountry) | **Get** /v1/PhoneNumbers/Countries | 
*VoiceCountriesApi* | [**FetchVoiceCountry**](docs/VoiceCountriesApi.md#fetchvoicecountry) | **Get** /v1/Voice/Countries/{IsoCountry} | 
*VoiceCountriesApi* | [**ListVoiceCountry**](docs/VoiceCountriesApi.md#listvoicecountry) | **Get** /v1/Voice/Countries | 
*VoiceNumbersApi* | [**FetchVoiceNumber**](docs/VoiceNumbersApi.md#fetchvoicenumber) | **Get** /v1/Voice/Numbers/{Number} | 


## Documentation For Models

 - [PricingV1VoiceCountryInstance](docs/PricingV1VoiceCountryInstance.md)
 - [ListMessagingCountryResponse](docs/ListMessagingCountryResponse.md)
 - [PricingV1Messaging](docs/PricingV1Messaging.md)
 - [PricingV1MessagingMessagingCountryInstanceOutboundSmsPricesPrices](docs/PricingV1MessagingMessagingCountryInstanceOutboundSmsPricesPrices.md)
 - [PricingV1VoiceVoiceNumberInboundCallPrice](docs/PricingV1VoiceVoiceNumberInboundCallPrice.md)
 - [PricingV1MessagingCountryInstance](docs/PricingV1MessagingCountryInstance.md)
 - [ListVoiceCountryResponse](docs/ListVoiceCountryResponse.md)
 - [PricingV1MessagingMessagingCountryInstanceOutboundSmsPrices](docs/PricingV1MessagingMessagingCountryInstanceOutboundSmsPrices.md)
 - [PricingV1VoiceCountry](docs/PricingV1VoiceCountry.md)
 - [ListPhoneNumberCountryResponse](docs/ListPhoneNumberCountryResponse.md)
 - [PricingV1PhoneNumber](docs/PricingV1PhoneNumber.md)
 - [PricingV1MessagingCountry](docs/PricingV1MessagingCountry.md)
 - [PricingV1VoiceVoiceCountryInstanceInboundCallPrices](docs/PricingV1VoiceVoiceCountryInstanceInboundCallPrices.md)
 - [PricingV1PhoneNumberCountryInstance](docs/PricingV1PhoneNumberCountryInstance.md)
 - [PricingV1Voice](docs/PricingV1Voice.md)
 - [ListMessagingCountryResponseMeta](docs/ListMessagingCountryResponseMeta.md)
 - [PricingV1VoiceNumber](docs/PricingV1VoiceNumber.md)
 - [PricingV1VoiceVoiceCountryInstanceOutboundPrefixPrices](docs/PricingV1VoiceVoiceCountryInstanceOutboundPrefixPrices.md)
 - [PricingV1VoiceVoiceNumberOutboundCallPrice](docs/PricingV1VoiceVoiceNumberOutboundCallPrice.md)
 - [PricingV1MessagingMessagingCountryInstanceInboundSmsPrices](docs/PricingV1MessagingMessagingCountryInstanceInboundSmsPrices.md)
 - [PricingV1PhoneNumberCountry](docs/PricingV1PhoneNumberCountry.md)
 - [PricingV1PhoneNumberPhoneNumberCountryInstancePhoneNumberPrices](docs/PricingV1PhoneNumberPhoneNumberCountryInstancePhoneNumberPrices.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```

