rest/pricing/v2/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.34.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *https://pricing.twilio.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*TrunkingCountriesApi* | [**FetchTrunkingCountry**](docs/TrunkingCountriesApi.md#fetchtrunkingcountry) | **Get** /v2/Trunking/Countries/{IsoCountry} | 
*TrunkingCountriesApi* | [**ListTrunkingCountry**](docs/TrunkingCountriesApi.md#listtrunkingcountry) | **Get** /v2/Trunking/Countries | 
*TrunkingNumbersApi* | [**FetchTrunkingNumber**](docs/TrunkingNumbersApi.md#fetchtrunkingnumber) | **Get** /v2/Trunking/Numbers/{DestinationNumber} | 
*VoiceCountriesApi* | [**FetchVoiceCountry**](docs/VoiceCountriesApi.md#fetchvoicecountry) | **Get** /v2/Voice/Countries/{IsoCountry} | 
*VoiceCountriesApi* | [**ListVoiceCountry**](docs/VoiceCountriesApi.md#listvoicecountry) | **Get** /v2/Voice/Countries | 
*VoiceNumbersApi* | [**FetchVoiceNumber**](docs/VoiceNumbersApi.md#fetchvoicenumber) | **Get** /v2/Voice/Numbers/{DestinationNumber} | 


## Documentation For Models

 - [ListTrunkingCountryResponse](docs/ListTrunkingCountryResponse.md)
 - [PricingV2VoiceVoiceNumberOutboundCallPrices](docs/PricingV2VoiceVoiceNumberOutboundCallPrices.md)
 - [PricingV2VoiceCountry](docs/PricingV2VoiceCountry.md)
 - [PricingV2TrunkingCountry](docs/PricingV2TrunkingCountry.md)
 - [PricingV2TrunkingCountryInstance](docs/PricingV2TrunkingCountryInstance.md)
 - [ListVoiceCountryResponse](docs/ListVoiceCountryResponse.md)
 - [PricingV2TrunkingCountryInstanceOriginatingCallPrices](docs/PricingV2TrunkingCountryInstanceOriginatingCallPrices.md)
 - [PricingV2TrunkingNumber](docs/PricingV2TrunkingNumber.md)
 - [PricingV2VoiceCountryInstance](docs/PricingV2VoiceCountryInstance.md)
 - [PricingV2TrunkingCountryInstanceTerminatingPrefixPrices](docs/PricingV2TrunkingCountryInstanceTerminatingPrefixPrices.md)
 - [ListTrunkingCountryResponseMeta](docs/ListTrunkingCountryResponseMeta.md)
 - [PricingV2TrunkingNumberOriginatingCallPrice](docs/PricingV2TrunkingNumberOriginatingCallPrice.md)
 - [PricingV2VoiceVoiceNumberInboundCallPrice](docs/PricingV2VoiceVoiceNumberInboundCallPrice.md)
 - [PricingV2VoiceNumber](docs/PricingV2VoiceNumber.md)
 - [PricingV2Voice](docs/PricingV2Voice.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```

